text overflow fix for pickers and title

--- a/client/components/attribute-picker/attribute-picker.component.scss
+++ b/client/components/attribute-picker/attribute-picker.component.scss
@@ -1,6 +1,10 @@
 .attribute-picker {
 	// border-bottom: 1px solid rgba(203, 202, 202, 0.7);
 	padding: 0.7rem 1rem;
+	width: auto;
+	float: right;
+	clear: right;
+	
 	ul {
 		display: inline-block;
 		list-style: none;
