--- a/client/components/shelf-title/shelf-title.component.scss
+++ b/client/components/shelf-title/shelf-title.component.scss
@@ -1,4 +1,6 @@
 .shelf-title {
+	float: right;
+	clear: right;
 	// font-size: 1.15rem;
 	font-size: 2.5vh;
 	letter-spacing: 1px;
